Fix feedback form spacing issues #53

--- a/public/style.css
+++ b/public/style.css
@@ -1744,10 +1744,10 @@ top: 116%;
 }
 .contact-form-wrapper .contact-form input,
 .contact-form-wrapper .contact-form textarea {
-  padding: 15px 25px;
+  padding: 12px 20px;
   border-radius: 30px;
   border: 1px solid var(--gray-4);
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   width: 100%;
   -webkit-transition: all 0.3s ease-out 0s;
   -moz-transition: all 0.3s ease-out 0s;
@@ -1758,7 +1758,7 @@ top: 116%;
 @media (max-width: 767px) {
   .contact-form-wrapper .contact-form input,
 .contact-form-wrapper .contact-form textarea {
-    padding: 12px 25px;
+    padding: 10px 20px;
   }
 }
 .contact-form-wrapper .contact-form input:focus,
@@ -1766,7 +1766,7 @@ top: 116%;
   border-color: var(--primary);
 }
 .contact-form-wrapper .contact-form textarea {
-  border-radius: 18px;
+  border-radius: 15px;
 }
 .map-style-9 {
   margin-top: -130px;
